--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@chakra-ui/react": "^2.1.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "chart.js": "^3.8.0",
     "framer-motion": "^6.3.10",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
     "zustand": "^4.0.0-rc.1"
   },
