--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^3.8.0",
     "framer-motion": "^6.3.10",
     "next": "12.1.6",
+    "next-pwa": "^5.6.0",
     "react": "18.1.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
