--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.10",
     "next": "12.1.6",
-    "next-pwa": "^5.6.0",
+    "next-pwa": "^5.5.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hotjar": "^5.4.0",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
