--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "type": "git",
     "url": "https://github.com/raptisj/taxemu"
   },
-  "keywords": ["tax", "taxation", "business", "employee"],
+  "keywords": [
+    "tax",
+    "taxation",
+    "business",
+    "employee"
+  ],
   "author": "John Raptis",
   "license": "MIT",
   "bugs": {
@@ -30,6 +35,7 @@
     "next-pwa": "^5.5.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "recharts": "^2.15.1",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
