Add blog post and init blog pages

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.10",
-    "next-pwa": "^5.5.4",
+    "gray-matter": "^4.0.3",
+    "marked": "^15.0.7",
     "next": "14.2.11",
+    "next-pwa": "^5.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "^2.15.1",
